# turkium

./: CONTRIBUTING.md  Cargo.toml  LICENSE  MINING_QUICKSTART.md  README.md  build-docker-multi-arch.sh  check  check.ps1  generate_address.rs  mining-address.txt  start-mining.sh  start_local_mining_macos.sh
api-server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  QUICK_START.md  README.md  UBUNTU_BUILD_GUIDE.md  build-and-install.sh  build.sh  fix-ubuntu-env.sh  install-systemd.sh  manage-service.sh  rebuild-and-update.sh  turkium-api.service
api-server/src/: cache.rs  config.rs  error.rs  main.rs  middleware.rs  models.rs  rpc_client.rs
api-server/src/handlers/: addresses.rs  blocks.rs  health.rs  info.rs  mod.rs  transactions.rs
bridge/: .gitignore  Cargo.toml  config.yaml
bridge/docs/: README.md
bridge/src/: app_config.rs  app_dirs.rs  cli.rs  client_handler.rs  default_client.rs  hasher.rs  inprocess_node.rs  lib.rs  main.rs  mining_state.rs  pow_diagnostic.rs  prom.rs  rkstratum_cpu_miner.rs  share_handler.rs  stratum_listener.rs  stratum_server.rs  tests.rs  tracing_setup.rs  turkiumapi.rs
bridge/static/: index.html  raw.html
bridge/static/css/: site.css
bridge/static/js/: dashboard.js
cli/: Cargo.toml
cli/src/: cli.rs  error.rs  imports.rs  lib.rs  main.rs  matchers.rs  utils.rs
cli/src/extensions/: transaction.rs
cli/src/modules/: account.rs  address.rs  broadcast.rs  connect.rs  create-unsigned-tx.rs  details.rs  disconnect.rs  estimate.rs  export.rs  guide.txt  help.rs  history.rs  import.rs  list.rs  message.rs  metrics.rs  miner.rs  mod.rs  monitor.rs  mute.rs  network.rs  node.rs  ping.rs  pskb.rs  reload.rs  rpc.rs  select.rs  send.rs  server.rs  settings.rs  sign.rs  sweep.rs  test.rs  theme.rs  track.rs  transfer.rs  wallet.rs
cli/src/wizards/: account.rs  import.rs  wallet.rs
components/addressmanager/: Cargo.toml
components/addressmanager/src/: lib.rs  port_mapping_extender.rs
components/connectionmanager/: Cargo.toml
components/connectionmanager/src/: lib.rs
components/consensusmanager/: Cargo.toml
components/consensusmanager/src/: batch.rs  lib.rs  session.rs
consensus/: Cargo.toml
consensus/benches/: check_scripts.rs  parallel_muhash.rs
consensus/client/: Cargo.toml
consensus/client/src/: error.rs  hash.rs  header.rs  imports.rs  input.rs  lib.rs  optional_header.rs  outpoint.rs  output.rs  parents.rs  sign.rs  signing.rs  transaction.rs  utils.rs  utxo.rs
consensus/core/: Cargo.toml
consensus/core/benches/: serde_benchmark.rs
consensus/core/src/: acceptance_data.rs  block.rs  blockhash.rs  blockstatus.rs  constants.rs  header.rs  lib.rs  merkle.rs  muhash.rs  network.rs  pruning.rs  subnets.rs  trusted.rs  tx.rs
consensus/notify/: Cargo.toml
consensus/notify/src/: collector.rs  connection.rs  lib.rs  notification.rs  notifier.rs  root.rs  service.rs
consensus/pow/: Cargo.toml
consensus/pow/benches/: bench.rs
consensus/pow/src/: lib.rs  matrix.rs  wasm.rs  xoshiro.rs
consensus/src/: config.rs  errors.rs  lib.rs  params.rs  test_helpers.rs
consensus/src/consensus/: cache_policy_builder.rs  ctl.rs  factory.rs  mod.rs  services.rs  storage.rs  test_consensus.rs  utxo_set_override.rs
consensus/src/constants/: mod.rs
consensus/src/pipeline/: deps_manager.rs  mod.rs  monitor.rs
consensus/src/processes/: Parallel Processing.md  block_depth.rs  coinbase.rs  difficulty.rs  parents_builder.rs  past_median_time.rs  pruning.rs  relations.rs  traversal_manager.rs  window.rs
consensus/wasm/: Cargo.toml
consensus/wasm/src/: error.rs  lib.rs  utils.rs
crypto/merkle/: Cargo.toml
crypto/merkle/src/: lib.rs
crypto/txscript/: Cargo.toml
crypto/txscript/errors/: Cargo.toml
crypto/txscript/examples/: kip-10.rs
crypto/txscript/src/: data_stack.rs  error.rs  lib.rs  runtime_sig_op_counter.rs  script_builder.rs  script_class.rs  standard.rs
dns-seeder/: Cargo.toml  Dockerfile  QUICKSTART.md  README.md  deploy.sh  docker-compose.yml
dns-seeder/src/: config.rs  crawler.rs  dns_server.rs  main.rs  peer_manager.rs
indexes/core/: Cargo.toml
indexes/core/src/: connection.rs  indexed_utxos.rs  lib.rs  notification.rs  notifier.rs
indexes/processor/: Cargo.toml
indexes/processor/src/: errors.rs  lib.rs  processor.rs  service.rs
indexes/utxoindex/: Cargo.toml
indexes/utxoindex/src/: index.rs  lib.rs  update_container.rs
mining/: Cargo.toml
mining/benches/: bench.rs
mining/errors/: Cargo.toml
mining/errors/src/: block_template.rs  lib.rs  mempool.rs
mining/src/: cache.rs  errors.rs  lib.rs  manager.rs  manager_tests.rs  monitor.rs
mining/src/block_template/: builder.rs  errors.rs  selector.rs
mining/src/mempool/: check_transaction_standard.rs  config.rs  errors.rs  handle_new_block_transactions.rs  mod.rs  populate_entries_and_try_validate.rs  remove_transaction.rs  replace_by_fee.rs  validate_and_insert_transaction.rs
mining/src/model/: candidate_tx.rs  mod.rs  owner_txs.rs  topological_sort.rs  tx_insert.rs
mining/src/testutils/: coinbase_mock.rs  consensus_mock.rs
notify/: Cargo.toml
notify/benches/: bench.rs
notify/src/: broadcaster.rs  collector.rs  lib.rs  listener.rs  notification.rs  notifier.rs  root.rs  scope.rs  subscriber.rs
protocol/flows/: Cargo.toml
protocol/mining/: Cargo.toml
protocol/p2p/: Cargo.toml
rpc/core/: Cargo.toml
stratum-pool/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  pool.db
stratum-pool/src/: blockchain.rs  config.rs  database.rs  main.rs  miner.rs  reward.rs  share.rs
turk-txgen/: Cargo.toml
turk-txgen/benches/: bench.rs
turk-txgen/src/: main.rs
turkiumd/: Cargo.toml  README.md
turkiumd/src/: args.rs  daemon.rs  lib.rs  main.rs
turksim/: Cargo.toml
turksim/src/: blocks_json.rs  main.rs
wasm/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-docs  build-node  build-node-dev  build-release  build-web  build-web-dev
wasm/core/: Cargo.toml
wasm/examples/: init.js  package.json
wasm/npm/: LICENSE  README.md  index.js  package.json
wasm/src/: lib.rs  version.rs
(+819 files in other folders)
