[package]
name = "turkium-api-server"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Turkium gRPC Client
turkium-grpc-client = { path = "../rpc/grpc/client" }
turkium-rpc-core = { path = "../rpc/core" }

# gRPC
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# Async Runtime
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Environment Variables
dotenv = "0.15"
envy = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Metrics
prometheus = "0.13"

# Hex encoding/decoding
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "turkium-api-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
