[package]
name = "Turkium-consensus"
description = "Turkium consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
Turkium-addresses.workspace = true
Turkium-consensus-core.workspace = true
Turkium-consensus-notify.workspace = true
Turkium-consensusmanager.workspace = true
Turkium-core.workspace = true
Turkium-database.workspace = true
Turkium-hashes.workspace = true
Turkium-math.workspace = true
Turkium-merkle.workspace = true
Turkium-muhash.workspace = true
Turkium-notify.workspace = true
Turkium-pow.workspace = true
Turkium-txscript.workspace = true
Turkium-txscript-errors.workspace = true
Turkium-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
Turkium-txscript-errors.workspace = true
Turkium-addresses.workspace = true

[[bench]]
name = "parallel_muhash"
harness = false

[[bench]]
name = "check_scripts"
harness = false

[features]
html_reports = []
devnet-prealloc = ["Turkium-consensus-core/devnet-prealloc"]

[lints]
workspace = true
