[package]
name = "turkium-consensus"
description = "turkium consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
turkium-addresses.workspace = true
turkium-consensus-core.workspace = true
turkium-consensus-notify.workspace = true
turkium-consensusmanager.workspace = true
turkium-core.workspace = true
turkium-database.workspace = true
turkium-hashes.workspace = true
turkium-math.workspace = true
turkium-merkle.workspace = true
turkium-muhash.workspace = true
turkium-notify.workspace = true
turkium-pow.workspace = true
turkium-txscript.workspace = true
turkium-txscript-errors.workspace = true
turkium-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
turkium-txscript-errors.workspace = true
turkium-addresses.workspace = true

[[bench]]
name = "parallel_muhash"
harness = false

[[bench]]
name = "check_scripts"
harness = false

[features]
html_reports = []
devnet-prealloc = ["turkium-consensus-core/devnet-prealloc"]

[lints]
workspace = true
