[package]
name = "turkium-dns-seeder"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
tonic = "0.11"
prost = "0.12"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rand = "0.8"
async-trait = "0.1"
trust-dns-resolver = "0.23"
trust-dns-proto = "0.23"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
dashmap = "5.5"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
