[package]
name = "turkium-mining"
description = "turkium mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
turkium-addresses.workspace = true
turkium-consensus-core.workspace = true
turkium-consensusmanager.workspace = true
turkium-core.workspace = true
turkium-hashes.workspace = true
turkium-mining-errors.workspace = true
turkium-muhash.workspace = true
turkium-txscript.workspace = true
turkium-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
sweep-bptree = "0.4.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
turkium-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
