[package]
name = "turkium-stratum-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
bytes = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
parking_lot = "0.12"
dashmap = "5"
rand = "0.8"
toml = "0.8"
turkium-grpc-client = { path = "../rpc/grpc/client" }
turkium-rpc-core = { path = "../rpc/core" }

[[bin]]
name = "turkium-stratum-pool"
path = "src/main.rs"
