[package]
name = "turk-txgen"
description = "Turkium Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
Turkium-addresses.workspace = true
Turkium-consensus-core.workspace = true
Turkium-core.workspace = true
Turkium-grpc-client.workspace = true
Turkium-notify.workspace = true
Turkium-rpc-core.workspace = true
Turkium-txscript.workspace = true
Turkium-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
