[package]
name = "turk-txgen"
description = "turkium Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
turkium-addresses.workspace = true
turkium-consensus-core.workspace = true
turkium-core.workspace = true
turkium-grpc-client.workspace = true
turkium-notify.workspace = true
turkium-rpc-core.workspace = true
turkium-txscript.workspace = true
turkium-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
