[package]
name = "Turkiumd"
description = "Turkium full node daemon"
keywords = ["Turkium", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "Turkiumd_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
Turkium-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

Turkium-addresses.workspace = true
Turkium-addressmanager.workspace = true
Turkium-consensus-core.workspace = true
Turkium-consensus-notify.workspace = true
Turkium-consensus.workspace = true
Turkium-consensusmanager.workspace = true
Turkium-core.workspace = true
Turkium-database.workspace = true
Turkium-grpc-server.workspace = true
Turkium-hashes.workspace = true
Turkium-index-processor.workspace = true
Turkium-mining.workspace = true
Turkium-notify.workspace = true
Turkium-p2p-flows.workspace = true
Turkium-p2p-lib.workspace = true
Turkium-p2p-mining.workspace = true
Turkium-perf-monitor.workspace = true
Turkium-rpc-core.workspace = true
Turkium-rpc-service.workspace = true
Turkium-txscript.workspace = true
Turkium-utils.workspace = true
Turkium-utils-tower.workspace = true
Turkium-utxoindex.workspace = true
Turkium-wrpc-server.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["env"]}
dhat = { workspace = true, optional = true }
dirs.workspace = true
futures-util.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true
serde_json.workspace = true

toml = "0.8.10"
serde_with = "3.7.0"

[features]
heap = ["dhat", "Turkium-alloc/heap"]
devnet-prealloc = ["Turkium-consensus/devnet-prealloc"]
semaphore-trace = ["Turkium-utils/semaphore-trace"]

[lints]
workspace = true
