[package]
name = "turkiumd"
description = "turkium full node daemon"
keywords = ["Turkium", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "turkiumd_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
turkium-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

turkium-addresses.workspace = true
turkium-addressmanager.workspace = true
turkium-consensus-core.workspace = true
turkium-consensus-notify.workspace = true
turkium-consensus.workspace = true
turkium-consensusmanager.workspace = true
turkium-core.workspace = true
turkium-database.workspace = true
turkium-grpc-server.workspace = true
turkium-hashes.workspace = true
turkium-index-processor.workspace = true
turkium-mining.workspace = true
turkium-notify.workspace = true
turkium-p2p-flows.workspace = true
turkium-p2p-lib.workspace = true
turkium-p2p-mining.workspace = true
turkium-perf-monitor.workspace = true
turkium-rpc-core.workspace = true
turkium-rpc-service.workspace = true
turkium-txscript.workspace = true
turkium-utils.workspace = true
turkium-utils-tower.workspace = true
turkium-utxoindex.workspace = true
turkium-wrpc-server.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["env"]}
dhat = { workspace = true, optional = true }
dirs.workspace = true
futures-util.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true
serde_json.workspace = true

toml = "0.8.10"
serde_with = "3.7.0"

[features]
heap = ["dhat", "turkium-alloc/heap"]
devnet-prealloc = ["turkium-consensus/devnet-prealloc"]
semaphore-trace = ["turkium-utils/semaphore-trace"]

[lints]
workspace = true
