[package]
name = "turksim"
description = "Turkium Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
Turkium-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
Turkium-consensus-core.workspace = true
Turkium-consensus-notify.workspace = true
Turkium-consensus.workspace = true
Turkium-core.workspace = true
Turkium-database.workspace = true
Turkium-hashes.workspace = true
Turkium-perf-monitor.workspace = true
Turkium-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
flate2.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde_json.workspace = true
serde.workspace = true
faster-hex.workspace = true
Turkium-testing-integration.workspace = true


[features]
heap = ["dhat", "Turkium-alloc/heap"]
semaphore-trace = ["Turkium-utils/semaphore-trace"]

[lints]
workspace = true
