[package]
name = "Turkium-wasm"
description = "TURKPA WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
Turkium-addresses.workspace = true
Turkium-bip32.workspace = true
Turkium-consensus-core.workspace = true
Turkium-consensus-wasm.workspace = true
Turkium-core.workspace = true
Turkium-math.workspace = true
Turkium-pow.workspace = true
Turkium-txscript.workspace = true
Turkium-rpc-core.workspace = true
Turkium-utils.workspace = true
Turkium-wasm-core.workspace = true
Turkium-wallet-core.workspace = true
Turkium-wallet-keys.workspace = true
Turkium-wrpc-client.workspace = true
Turkium-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features]
wasm32-sdk = [
    "Turkium-wallet-core/wasm32-sdk",
    "Turkium-pow/wasm32-sdk",
    "Turkium-txscript/wasm32-sdk",
]
wasm32-core = [
    "Turkium-wallet-core/wasm32-core",
    "Turkium-pow/wasm32-sdk",
    "Turkium-txscript/wasm32-sdk",
]
wasm32-rpc = [
    "Turkium-consensus-core/wasm32-sdk",
    "Turkium-consensus-wasm/wasm32-sdk",
    "Turkium-wrpc-client/wasm32-sdk",
    "Turkium-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/Turkium" },
    { target = "web", out-dir = "web/Turkium" },
]
folder = "setup"

# Workaround for Rust 1.87.0
# https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
# This optimization configuration requires "-Ctarget-cpu=mvp" Rustflag (only enable W3C MVP feature set)
# This flag is automatically used either via (release optimized) build script at root
#   or via .cargo/config.toml when executing the build from /wasm
wasm-opt = ["-O","--enable-bulk-memory"]

[lints]
workspace = true
