[package]
name = "turkium-wasm"
description = "TURKPA WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
turkium-addresses.workspace = true
turkium-bip32.workspace = true
turkium-consensus-core.workspace = true
turkium-consensus-wasm.workspace = true
turkium-core.workspace = true
turkium-math.workspace = true
turkium-pow.workspace = true
turkium-txscript.workspace = true
turkium-rpc-core.workspace = true
turkium-utils.workspace = true
turkium-wasm-core.workspace = true
turkium-wallet-core.workspace = true
turkium-wallet-keys.workspace = true
turkium-wrpc-client.workspace = true
turkium-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features]
wasm32-sdk = [
    "turkium-wallet-core/wasm32-sdk",
    "turkium-pow/wasm32-sdk",
    "turkium-txscript/wasm32-sdk",
]
wasm32-core = [
    "turkium-wallet-core/wasm32-core",
    "turkium-pow/wasm32-sdk",
    "turkium-txscript/wasm32-sdk",
]
wasm32-rpc = [
    "turkium-consensus-core/wasm32-sdk",
    "turkium-consensus-wasm/wasm32-sdk",
    "turkium-wrpc-client/wasm32-sdk",
    "turkium-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/Turkium" },
    { target = "web", out-dir = "web/Turkium" },
]
folder = "setup"

# Workaround for Rust 1.87.0
# https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
# This optimization configuration requires "-Ctarget-cpu=mvp" Rustflag (only enable W3C MVP feature set)
# This flag is automatically used either via (release optimized) build script at root
#   or via .cargo/config.toml when executing the build from /wasm
wasm-opt = ["-O","--enable-bulk-memory"]

[lints]
workspace = true
