[package]
name = "Turkium-connectionmanager"
description = "Turkium connection manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
itertools.workspace = true
Turkium-addressmanager.workspace = true
Turkium-core.workspace = true
Turkium-p2p-lib.workspace = true
Turkium-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true

[lints]
workspace = true