[package]
name = "turkium-connectionmanager"
description = "turkium connection manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
itertools.workspace = true
turkium-addressmanager.workspace = true
turkium-core.workspace = true
turkium-p2p-lib.workspace = true
turkium-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true

[lints]
workspace = true