[package]
name = "Turkium-consensusmanager"
description = "Turkium consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
Turkium-addresses.workspace=true
Turkium-consensus-core.workspace = true
Turkium-consensus-notify.workspace = true
Turkium-core.workspace = true
Turkium-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true

[lints]
workspace = true
