[package]
name = "turkium-consensusmanager"
description = "turkium consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
turkium-addresses.workspace=true
turkium-consensus-core.workspace = true
turkium-consensus-notify.workspace = true
turkium-core.workspace = true
turkium-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true

[lints]
workspace = true
