[package]
name = "turkium-consensus-client"
description = "turkium consensus client data structures"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []
wasm32-types = []

[dependencies]
turkium-addresses.workspace = true
turkium-consensus-core.workspace = true
turkium-hashes.workspace = true
turkium-math.workspace = true
turkium-txscript.workspace = true
turkium-utils.workspace = true
turkium-wasm-core.workspace = true

ahash.workspace = true
cfg-if.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
itertools.workspace = true

workflow-wasm.workspace = true
workflow-log.workspace = true

[lints]
workspace = true
