[package]
name = "Turkium-consensus-notify"
description = "Turkium consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
Turkium-consensus-core.workspace = true
Turkium-core.workspace = true
Turkium-hashes.workspace = true
Turkium-notify.workspace = true
Turkium-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true

[lints]
workspace = true
