[package]
name = "turkium-pow"
description = "turkium proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []

[dependencies]
js-sys.workspace = true
turkium-consensus-core.workspace = true
turkium-consensus-client.workspace = true
turkium-hashes.workspace = true
turkium-math.workspace = true
turkium-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
